# bn128-jni

./: .gitmodules  README.md
bench/: .gitignore  build.gradle  settings.gradle
bench/gradle/wrapper/: gradle-wrapper.properties
bench/src/main/java/org/aion/tetryon/: AltBn128.java  AltBn128Jni.java  Fp.java  Fp2.java  G1.java  G1Point.java  G2.java  G2Point.java  Pairing.java  Util.java
bench/src/test/java/org/aion/tetryon/: AllTests.java  ErrorHandlingTest.java  Fp2Test.java  G16SquarePreimageTest.java  G1Test.java  G2Test.java  JniTest.java  PairingTest.java
native/: .gitignore  Cargo.toml
native/bn-jni/: Cargo.toml
native/bn-jni/src/: lib.rs
